--- a/currenc/css/style.css
+++ b/currenc/css/style.css
@@ -75,9 +75,9 @@ header {position:fixed;width:100%;height:56px;top:0;background-color:#cf4647;dis
 #currencies-list.open {transform:translateX(0);}
 
 #currencies-list .header {height:56px;position:fixed;width:98%;background:#fff;display:flex;z-index:301;top:8px;border-radius:16px;padding:0 8px;left:1%;box-shadow:0 0 15px -5px rgba(208, 70, 71, 0.9);}
-#currencies-list .header span.back__button {height:48px;width:48px;position:relative;margin:4px;display:block;cursor:pointer;}
-#currencies-list .header span.back__button::before {content:"";position:absolute;width:24px;height:1px;border-bottom:2px solid #cf4647;top:50%;left:50%;transform:translateX(-50%);}
-#currencies-list .header span.back__button::after {content:"";position:absolute;width:12px;height:12px;border-left:2px solid #cf4647;border-bottom:2px solid #cf4647;transform:rotate(45deg) translateX(190%) translateY(30%);}
+#currencies-list .header .back__button {height:48px;width:48px;position:relative;margin:4px;display:block;cursor:pointer;}
+#currencies-list .header .back__button::before {content:"";position:absolute;width:24px;height:1px;border-bottom:2px solid #cf4647;top:50%;left:50%;transform:translateX(-50%);}
+#currencies-list .header .back__button::after {content:"";position:absolute;width:12px;height:12px;border-left:2px solid #cf4647;border-bottom:2px solid #cf4647;transform:rotate(45deg) translateX(190%) translateY(30%);}
 #currencies-list .header span.search__button {height:48px;width:48px;position:relative;margin:4px 4px 4px auto;display:block;cursor:pointer;}
 #currencies-list .header span.search__button::before {content:"";position:absolute;width:12px;height:1px;border-bottom:3px solid #cf4647;top:50%;left:50%;transform:rotate(45deg) translateX(25%) translateY(110%);}
 #currencies-list .header span.search__button::after {content:"";position:absolute;width:20px;height:20px;border:2px solid #cf4647;transform:translateX(50%) translateY(50%);border-radius:100%;}
@@ -121,15 +121,16 @@ label {position:absolute;bottom:20%;color:#fff;left:15%;font-size:30px;}
 #switch-button span::after {content:"";position:absolute;width:12px;height:12px;border-left:2px solid #cf4647;border-bottom:2px solid #cf4647;transform:rotate(45deg) translateX(190%) translateY(30%);}
 
 #keypad {height:calc(100% + 56px);width:100%;top:-56px;background:#cf4647;z-index:400;padding:0 0 72px;display:none;will-change:display;}
-#keypad .header {height:56px;width:100%;padding:0 8px;position:fixed;top:0;z-index:401;}
-#keypad .header span.back__button {height:48px;width:48px;position:relative;margin:4px;display:block;cursor:pointer;}
-#keypad .header span.back__button::before {content:"";position:absolute;width:24px;height:1px;border-bottom:2px solid #fff;top:50%;left:50%;transform:translateX(-50%);}
-#keypad .header span.back__button::after {content:"";position:absolute;width:12px;height:12px;border-left:2px solid #fff;border-bottom:2px solid #fff;transform:rotate(45deg) translateX(190%) translateY(30%);}
+#keypad .header {height:64px;width:100%;padding:8px;position:fixed;top:0;z-index:401;overflow:hidden;text-align:right;}
+#keypad .header .close__button {height:48px;width:48px;position:relative;display:inline-flex;cursor:pointer;border:none;background:transparent;outline:none;padding:0;justify-content:center;}
+#keypad .header .close__button svg {pointer-events:none;}
+.fil1 {fill:none}
+.fil0 {fill:#fff;fill-rule:nonzero}
 
 .slideInUp{display:block!important;animation:slide-in-up .3s cubic-bezier(0, 0, 0.30, 1);}
     @keyframes slide-in-up {from{opacity:0;margin-top:50%;}to{opacity:1;margin-top:0;}}
 
-.number__keypad {display:grid;grid-auto-flow:row;grid-template-columns:auto auto auto;padding:184px 8px 0;height:calc(100% - 28px);}
+.number__keypad {display:grid;grid-auto-flow:row;grid-template-columns:auto auto auto;padding:0 8px 0;height:calc(100% - 184px);margin-top:184px;}
 .key, .key a {align-items:center;justify-content:center;display:flex;color:#fff;font-size:28px;cursor:pointer;}
 .key a {border:1px solid rgba(255, 255, 255, 0.4);border-radius:50%;width:64px;height:64px;background:#d6444d;pointer-events:none;}
 .key:last-of-type a span {position:absolute;content:"";width:24px;height:8px;border:none;border-bottom:2px solid #ffffff;border-left:2px solid #ffffff;transform:rotate(-45deg);top:40%;right:18px;}
@@ -182,6 +183,38 @@ header svg {width:48px;height:48px;margin:4px;display:flex;align-items:center;ju
 
 .toast__msg {width:250px;font-family:sans-serif;min-height:50px;background:rgba(0, 0, 0, 0.9);color:#fff;display:flex;align-items:center;justify-content:space-between;font-size:14px;font-weight:500;padding-left:15px;padding-right:10px;word-wrap:break-word;transition:opacity 0.30s cubic-bezier(0, 0, 0.30, 1);text-transform:initial;margin-bottom:10px;border-radius:5px;}
 .toast__msg--hide {opacity:0;}
+
+/*  Ripple */
+.close__button:after {
+    content: '';
+    display: block;
+    position: absolute;
+    left: 50%;
+    top: 50%;
+    width: 120px;
+    height: 120px;
+    margin-left: -60px;
+    margin-top: -60px;
+    background: #fff;
+    border-radius: 100%;
+    opacity: .6;
+
+    transform: scale(0);
+}
+
+@keyframes ripple {
+    0% {transform:scale(0);}
+    25% {transform:scale(1);}
+    100% {opacity:0;transform:scale(1);}
+}
+
+.close__button:not(:active):after {animation:ripple 1s ease-out;}
+
+/* fixes initial animation run, without user input, on page load. */
+.close__button:after {visibility:hidden;}
+
+.close__button:focus:after {visibility:visible;}
+/* Ripple */
 
 @media screen and (max-width: 768px) {
     .header__title {font-size:20px;margin:0 auto;}
