--- a/currenc/css/style.css
+++ b/currenc/css/style.css
@@ -31,9 +31,10 @@
 }
 
 :root {
-    --cursor-position:80px;
-    --brand-color:#cf4647;
-    --text-case:lowercase;
+    --cursor-position: 80px;
+    --brand-color: #cf4647;
+    --text-case: lowercase;
+    --input-font-size: 80px;
 }
 
 *,
@@ -45,25 +46,36 @@
 html,
 body,
 p {
-    margin:0;padding:0;
-    -moz-user-select:none;
-    -ms-user-select:none;
-    -webkit-user-select:none;
-    user-select:none;
+    margin: 0;
+    padding: 0;
+    -moz-user-select: none;
+    -ms-user-select: none;
+    -webkit-user-select: none;
+    user-select: none;
 }
 
-a {text-decoration:none;color:inherit;}
+a {
+    text-decoration: none;
+    color: inherit;
+}
 
 ul,
 li {
-    list-style:none;padding:0;margin:0;
+    list-style: none;
+    padding: 0;
+    margin: 0;
 }
 
-h3 {text-align:left;margin-top:20px;margin-bottom:30px;font-weight:500;}
+h3 {
+    text-align: left;
+    margin-top: 20px;
+    margin-bottom: 30px;
+    font-weight: 500;
+}
 
 html,
 body {
-    font-size:16px;
+    font-size: 16px;
     -webkit-tap-highlight-color: transparent;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
@@ -75,12 +87,23 @@ body {
 
 body {
     font-family: 'Encode Sans Condensed', 'Source Sans Pro', Roboto, 'Helvetica Neue', Helvetica, Arial, sans-serif;
-    font-size:1rem;scroll-behavior:smooth;background:var(--brand-color);
+    font-size: 1rem;
+    scroll-behavior: smooth;
+    background: var(--brand-color);
 }
 
-.app__layout {width:100%;height:calc(100vh - 56px);}
+.app__layout {
+    width: 100%;
+    height: calc(100vh - 56px);
+    padding-top: 24px;
+    position: relative;
+}
 
-#exchange-main-container{display:flex;flex-direction:column;height:100%;}
+#exchange-main-container {
+    display: flex;
+    flex-direction: column;
+    height: 100%;
+}
 
 #base-currency-wrapper {
     background: var(--brand-color);
@@ -127,7 +150,7 @@ header {
     position: fixed;
     width: 100%;
     height: 56px;
-    top: 0;
+    top: 24px;
     background-color: var(--brand-color);
     display: flex;
     z-index: 100;
@@ -141,15 +164,17 @@ header {
     will-change: transform;
     position: fixed;
     z-index: 300;
-    top: 0;
+    top: 24px;
     background: #fff5f6;
     transform: translateX(105%);
     height: 100%;
     width: 100%;
+    opacity: 0;
 }
 
 #currencies-list.open {
     transform: translateX(0);
+    opacity: 1;
 }
 
 #currencies-list .header {
@@ -166,7 +191,7 @@ header {
     box-shadow: 0 0 15px -5px rgba(208, 70, 71, 0.9);
 }
 
-#currencies-list .header > .back__button,
+#currencies-list .header>.back__button,
 #currencies-list .header .back__button {
     height: 48px;
     width: 48px;
@@ -176,7 +201,7 @@ header {
     cursor: pointer;
 }
 
-#currencies-list .header > .back__button::before,
+#currencies-list .header>.back__button::before,
 #currencies-list .header .back__button::before {
     content: "";
     position: absolute;
@@ -188,7 +213,7 @@ header {
     transform: translateX(-50%);
 }
 
-#currencies-list .header > .back__button::after,
+#currencies-list .header>.back__button::after,
 #currencies-list .header .back__button::after {
     content: "";
     position: absolute;
@@ -198,8 +223,12 @@ header {
     border-bottom: 2px solid var(--brand-color);
     transform: rotate(45deg) translateX(190%) translateY(30%);
 }
-#currencies-list .header #search-field-wrapper > .back__button::before,
-#currencies-list .header #search-field-wrapper > .back__button::after{border-color:#fff;}
+
+#currencies-list .header #search-field-wrapper>.back__button::before,
+#currencies-list .header #search-field-wrapper>.back__button::after {
+    border-color: #fff;
+}
+
 #currencies-list .header span.search__button {
     height: 48px;
     width: 48px;
@@ -208,6 +237,7 @@ header {
     display: block;
     cursor: pointer;
 }
+
 #currencies-list .header span.search__button::before {
     content: "";
     position: absolute;
@@ -218,6 +248,7 @@ header {
     left: 50%;
     transform: rotate(45deg) translateX(60%) translateY(100%);
 }
+
 #currencies-list .header span.search__button::after {
     content: "";
     position: absolute;
@@ -227,7 +258,11 @@ header {
     transform: translateX(65%) translateY(65%);
     border-radius: 100%;
 }
-#currencies-list .header .search__wrapper {margin-left:auto;}
+
+#currencies-list .header .search__wrapper {
+    margin-left: auto;
+}
+
 #currencies-list .header .search__wrapper .search__field {
     top: 0;
     height: 100%;
@@ -243,45 +278,67 @@ header {
     z-index: 1;
 }
 
-#currencies-list #search-field-wrapper {overflow:hidden;border-radius:16px;width:100%;height:100%;left:0;z-index:5;}
+#currencies-list #search-field-wrapper {
+    overflow: hidden;
+    border-radius: 16px;
+    width: 100%;
+    height: 100%;
+    left: 0;
+    z-index: 5;
+}
 
 #currencies-list #search-field-wrapper .scala {
     position: absolute;
-    left:0;top:-50vw;height:100vw;width:100vw;
+    left: 0;
+    top: -50vw;
+    height: 100vw;
+    width: 100vw;
     margin-top: 28px;
     z-index: -1;
     background-color: #d04647;
     border-radius: 100%;
-    transition:all ease-in-out 0.45s;
+    transition: all ease-in-out 0.25s;
     transform: scale3d(0, 0, 0);
-    transform-origin:calc(96% - 32px) 50%;/*var(--xaxis) 50%;*/
+    transform-origin: calc(96% - 32px) 50%;
+    /*var(--xaxis) 50%;*/
 }
 
-#currencies-list #search-field-wrapper .search__field::placeholder{color:#fff;font-size:18px;}
+#currencies-list #search-field-wrapper .search__field::placeholder {
+    color: #fff;
+    font-size: 18px;
+}
 
 #currencies-list #search-field-wrapper .caret {
-    position:absolute;
-    color:#fff;
-    animation:blink 1s infinite;
-    top:50%;
-    left:var(--cursor-position);
-    transform:translateY(-50%);
-    border-right:1px solid #fff;
-    display:inline-block;
-    width:1px;
-    height:18px;
+    position: absolute;
+    color: #fff;
+    animation: blink 1s infinite;
+    top: 50%;
+    left: var(--cursor-position);
+    transform: translateY(-50%);
+    border-right: 1px solid #fff;
+    display: inline-block;
+    width: 1px;
+    height: 18px;
 }
-    @keyframes blink {
-        0%, 49.9%, 100% { opacity: 0; }
-        50%, 100% { opacity: 1; }
+
+@keyframes blink {
+    0%,
+    49.9%,
+    100% {
+        opacity: 0;
     }
+    50%,
+    100% {
+        opacity: 1;
+    }
+}
 
 #currencies-list ul.currencies {
-    display:block;
-    text-align:left;
-    padding:80px 16px 40px;
-    height:100%;
-    overflow-y:scroll;
+    display: block;
+    text-align: left;
+    padding: 80px 16px 40px;
+    height: 100%;
+    overflow-y: scroll;
 }
 
 #currencies-list ul.currencies li {
@@ -332,7 +389,7 @@ header {
 }
 
 .base__currency #input-wrapper {
-    width: 264px;
+    width: 320px;
     display: block;
     margin: 0 auto;
 }
@@ -345,14 +402,15 @@ header {
     top: 0;
     animation: move-up .45s cubic-bezier(1, 0, 0.30, 1);
 }
-    @keyframes move-up {
-        0% {
-            top: 80px;
-        }
-        100% {
-            top: 0;
-        }
+
+@keyframes move-up {
+    0% {
+        top: 80px;
     }
+    100% {
+        top: 0;
+    }
+}
 
 .base__currency #input-wrapper label {
     transform: translateX(-50%) translateY(-50%);
@@ -367,7 +425,7 @@ header {
 }
 
 .base__currency #input-wrapper input {
-    font-size: 80px;
+    font-size: var(--input-font-size);
     width: 100%;
     height: 115px;
     text-align: center;
@@ -386,7 +444,7 @@ header {
     height: 48px;
     margin: 16px auto;
     color: #f9e0e1;
-    line-height: 42px;
+    line-height: 48px;
     border: 2px solid #fecdd2;
     cursor: pointer;
     border-radius: 53px;
@@ -449,21 +507,38 @@ label {
     top: 50%;
 }
 
-.app__offline {background-color:#464a4c;/* #1ab8ef;*/}
+.app__offline {
+    background-color: #464a4c;
+    /* #1ab8ef;*/
+}
 
-.fixed {position:fixed!important;}
+.fixed {
+    position: fixed!important;
+}
 
-.absolute {position:absolute!important;}
+.absolute {
+    position: absolute!important;
+}
 
-.relative {position:relative!important;}
+.relative {
+    position: relative!important;
+}
 
-.inline {display:inline!important;}
+.inline {
+    display: inline!important;
+}
 
-.disabled {pointer-events:none!important;}
+.disabled {
+    pointer-events: none!important;
+}
 
-.pointer {cursor:pointer!important;}
+.pointer {
+    cursor: pointer!important;
+}
 
-.hidden {display:none!important;}
+.hidden {
+    display: none!important;
+}
 
 #switch-button {
     top: 50%;
@@ -491,12 +566,13 @@ label {
 #switch-button.rotate {
     animation: rotate .45s ease-in;
 }
-    @keyframes rotate {
-        100% {
-            transform-origin: center;
-            transform: rotate(180deg);
-        }
+
+@keyframes rotate {
+    100% {
+        transform-origin: center;
+        transform: rotate(180deg);
     }
+}
 
 #keypad {
     height: calc(100% + 56px);
@@ -514,7 +590,7 @@ label {
     width: 100%;
     padding: 8px;
     position: fixed;
-    top: 0;
+    top: 24px;
     z-index: 401;
     overflow: hidden;
     text-align: right;
@@ -533,7 +609,8 @@ label {
     justify-content: center;
 }
 
-#keypad .header .close__button svg, .keyboard__row span svg {
+#keypad .header .close__button svg,
+.keyboard__row span svg {
     pointer-events: none;
 }
 
@@ -547,7 +624,7 @@ svg .fil0 {
 }
 
 #alphapad {
-    bottom:0;
+    bottom: 0;
     width: 100%;
     height: auto;
     background: #333538;
@@ -558,17 +635,20 @@ svg .fil0 {
 }
 
 .reveal {
-    display: block!important;transform: translateY(0)!important;
+    display: block!important;
+    transform: translateY(0)!important;
     animation: reveal .3s cubic-bezier(0, 0, 0.30, 1);
 }
-    @keyframes reveal {
-        0% {
-            transform: translateY(105%)
-        }
-        100% {
-            transform: translateY(0);
-        }
+
+@keyframes reveal {
+    0% {
+        transform: translateY(105%)
     }
+    100% {
+        transform: translateY(0);
+    }
+}
+
 
 /*#alphapad .keyboard {
     padding: 16px 0;
@@ -576,12 +656,14 @@ svg .fil0 {
 
 #alphapad .keyboard__row {
     display: flex;
-    font-weight:100;padding:16px 0 2px;
+    font-weight: 100;
+    padding: 16px 0 2px;
 }
 
 #alphapad .keyboard__row .key {
-    flex: 1;cursor:pointer;
-    height:56px;
+    flex: 1;
+    cursor: pointer;
+    height: 56px;
     justify-content: center;
     align-items: center;
     display: flex;
@@ -594,11 +676,11 @@ svg .fil0 {
 }
 
 .keyboard__row:nth-child(2) {
-    padding:2px 18px!important;
+    padding: 2px 18px!important;
 }
 
 .keyboard__row:last-child {
-    padding:2px 9px 16px!important;
+    padding: 2px 9px 16px!important;
 }
 
 .keyboard__row:last-child span:first-child {
@@ -613,16 +695,17 @@ svg .fil0 {
     display: block!important;
     animation: slide-in-up .3s cubic-bezier(0, 0, 0.30, 1);
 }
-    @keyframes slide-in-up {
-        from {
-            opacity: 0;
-            margin-top: 50%;
-        }
-        to {
-            opacity: 1;
-            margin-top: 0;
-        }
+
+@keyframes slide-in-up {
+    from {
+        opacity: 0;
+        margin-top: 50%;
     }
+    to {
+        opacity: 1;
+        margin-top: 0;
+    }
+}
 
 .number__keypad {
     display: grid;
@@ -630,8 +713,8 @@ svg .fil0 {
     grid-template-columns: auto auto auto;
     padding: 0 8px 0;
     height: calc(100% - 184px);
-    margin:184px auto 0;
-    max-width:400px;
+    margin: 184px auto 0;
+    max-width: 400px;
 }
 
 .number__keypad .key,
@@ -680,7 +763,7 @@ svg .fil0 {
     display: block;
 }
 
-.ball-scale-multiple > div {
+.ball-scale-multiple>div {
     background-color: #46494b;
     border-radius: 100%;
     position: absolute;
@@ -693,26 +776,27 @@ svg .fil0 {
     animation: ball-scale-multiple 1s 0s linear infinite;
 }
 
-.ball-scale-multiple > div:nth-child(2) {
+.ball-scale-multiple>div:nth-child(2) {
     animation-delay: -.4s;
 }
 
-.ball-scale-multiple > div:nth-child(3) {
+.ball-scale-multiple>div:nth-child(3) {
     animation-delay: -.2s;
 }
-    @keyframes ball-scale-multiple {
-        0% {
-            transform: scale(0);
-            opacity: 0
-        }
-        5% {
-            opacity: 1
-        }
-        100% {
-            transform: scale(1);
-            opacity: 0
-        }
+
+@keyframes ball-scale-multiple {
+    0% {
+        transform: scale(0);
+        opacity: 0
     }
+    5% {
+        opacity: 1
+    }
+    100% {
+        transform: scale(1);
+        opacity: 0
+    }
+}
 
 @keyframes sonarLoading {
     0% {
@@ -722,6 +806,7 @@ svg .fil0 {
         box-shadow: 0 0 0 20px rgba(249, 203, 64, 0)
     }
 }
+
 
 /*.offline {
     background: #1f78f3;
@@ -814,27 +899,26 @@ header svg {
 .close__button:not(:active):after {
     animation: ripple 1s ease-out;
 }
-    @keyframes ripple {
-        0% {
-            transform: scale(0);
-        }
-        25% {
-            transform: scale(1);
-        }
-        100% {
-            opacity: 0;
-            transform: scale(1);
-        }
+
+@keyframes ripple {
+    0% {
+        transform: scale(0);
     }
+    25% {
+        transform: scale(1);
+    }
+    100% {
+        opacity: 0;
+        transform: scale(1);
+    }
+}
+
+
 /* Ripple */
 
 @media screen and (max-width: 768px) {
     .header__title {
         font-size: 20px;
-        margin: 0 auto;
-    }
-    header svg {
-        position: absolute;
     }
 }
 
@@ -858,12 +942,3 @@ header svg {
         font-size: 48px;
     }
 }
-
-@media screen and (max-device-height: 731px) {}
-
-
-/*
-... done    TODO: remove tap-highlights from DOM elements that responds to click event
-COMMENT: #f0f2f4,#ff5252,#e5d4d4,#3b464b,#cc4243,#9b8c8f,#fb9597,#fabac2
-COMMENT: #f6972e, #323A45, #90857A, #A09F9B
-*/
